# python-grpc

./: docker-compose.yml  readme.md
client/: Dockerfile  app.py  pyproject.toml  requirements.txt  users_pb2.py  users_pb2.pyi
server/: app.py  pyproject.toml  requirements.txt  users_pb2_grpc.py
server/protos/: users.proto
